<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_rlSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="HardcodedText">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="23dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_arrow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imLogo"
        android:layout_width="108dp"
        android:layout_height="79dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        app:srcCompat="@drawable/ic_baseline_movie_filter_24" />

    <LinearLayout
        android:id="@+id/llLinearSignUp"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/litEmail"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:textColorHint="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_email_icon"
                android:drawableLeft="@drawable/ic_email_icon"
                android:drawablePadding="15dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:visibility="gone"
            android:textColorHint="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawablePadding="15dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_rounded"
            android:text="@string/login_change_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/llPrivacyPolice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_by_using_the_site_you_agree_to_our"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrivacyPolice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:text="@string/login_privacy_policy"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>