<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#334c6a">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="47dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/profile_hello"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/ivProfile"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_baseline_account_circle_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.126"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.031"
                    app:layout_constraintStart_toEndOf="@+id/ivProfile"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/profile_favorites"
                    android:layout_marginTop="28dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/crown_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileRecommendations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/recommendations"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileFavorites" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_baseline_bookmark_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileWatchList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/profile_watch_list"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.005"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView4"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileRecommendations" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sing_out"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="34dp"
                    android:background="@drawable/round_corner"
                    android:text="@string/menu_sing_out"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileRating"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/star_shooting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/profile_rating"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.004"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView5"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileWatchList" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>